# quetzal-annotator

./: pyproject.toml  requirements-dev.txt
quetzal_annotator/: __init__.py  ontology.py  ontology_collection.py  proforma_peptidoform.py  spectrum_annotator.py  spectrum_annotator_helper.py  spectrum_comparator.py  spectrum_examiner.py  universal_spectrum_identifier.py  universal_spectrum_identifier_validator.py
