[tool.poetry]
name = "quetzal-annotator"
version = "0.1.0"
description = "A peptide fragment ion spectrum annotation tool using PSI mzPAF standard"
authors = ["Quetzal Annotator Team <quetzal-annotator@example.com>"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/Quetzal-Annotator/quetzal-annotator"
repository = "https://github.com/Quetzal-Annotator/quetzal-annotator"
documentation = "https://github.com/Quetzal-Annotator/quetzal-annotator#readme"
keywords = ["proteomics", "mass-spectrometry", "peptide", "annotation", "mzPAF", "PSI"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Chemistry",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]
packages = [{include = "quetzal_annotator"}]
include = [
    "quetzal_annotator/*.obo",
    "quetzal_annotator/*.json",
]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "*"
requests = "*"
pandas = "*"
scipy = "*"
matplotlib = "*"
requests-cache = "*"

[tool.poetry.group.dev.dependencies]
pytest = "*"
pytest-cov = "*"
black = "*"
flake8 = "*"
mypy = "*"
twine = "*"
build = "*"
sphinx = "*"
sphinx-rtd-theme = "*"
types-requests = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/Quetzal-Annotator/quetzal-annotator/issues"

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
testpaths = ["test"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=quetzal_annotator",
    "--cov-report=term-missing",
    "--cov-report=html",
]
